--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
   "dependencies": {
     "@alchemistcoin/default-token-list": "git+https://github.com/alchemistcoin/default-token-list.git#main",
     "react-range": "^1.8.7",
-    "socket.io-client": "^4.0.1"
+    "socket.io-client": "^4.0.1",
+    "yarn": "^1.22.18"
   }
 }
